--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
   font-display: swap;
 }
 
-@font-face {
+/* @font-face {
   font-family: "Nunito-SemiBold";
   src: url("./fonts/Nunito-SemiBold.eot");
   src: url("./fonts/Nunito-SemiBold.eot") format("embedded-opentype"),
@@ -23,7 +23,7 @@
     url("./fonts/Nunito-Semibold.ttf") format("truetype"),
     url("./fonts/Nunito-SemiBold.svg") format("svg");
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: "Nunito-Regular";
